welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value tousposes
tousposes = 0
^BDRBuggle:4: error: not found: value tousposes
while(tousposes != 4)
      ^BDRBuggle:8: error: not found: value tousposes
	tousposes = tousposes + 1;
        ^